# aletheia-mail

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
samples/: README.md
src/aletheia/: __init__.py  cli.py
src/aletheia/analyzers/: __init__.py  base.py  headers.py  urls.py
src/aletheia/models/: __init__.py  email.py  findings.py  report.py  risk.py
src/aletheia/parsers/: __init__.py  base.py  eml_parser.py  exceptions.py
tests/: test_cli.py  test_eml_parser.py  test_header_analyzer.py  test_models.py  test_url_analyzer.py
tests/fixtures/: sample_basic.eml  sample_header_suspicious.eml  sample_missing_from.eml  sample_url_suspicious.eml
